styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* @layer base {
  :root {
    --background: hsl(348, 5%, 80%);
    --foreground: hsl(240, 10%, 3.9%);

    --card: hsl(348, 5%, 80%);
    --card-foreground: hsl(240, 10%, 3.9%);
 
    --popover: hsl(348, 5%, 80%);
    --popover-foreground: hsl(240, 10%, 3.9%);
 
    --primary: hsl(240, 5.9%, 10%);
    --primary-foreground: hsl(0, 0%, 98%);
 
    --secondary: hsl(0, 4, 70%);
    --secondary-foreground: hsl(240, 5.9%, 10%);
 
    --muted: hsl(240, 4.8%, 95.9%);
    --muted-foreground: hsl(240, 3.8%, 46.1%);
 
    --accent: hsl(240, 4.8%, 95.9%);
    --accent-foreground: hsl(240, 5.9%, 10%);
 
    --destructive: hsl(0, 84.2%, 60.2%);
    --destructive-foreground: hsl(0, 0%, 98%);

    --border: hsl(240, 5.9%, 90%);
    --input: hsl(240, 5.9%, 90%);
    --ring: hsl(240, 10%, 3.9%);
 
    --radius: 0.5rem;
  }
 
  .dark {
    --background: hsl(240, 10%, 3.9%);
    --foreground: hsl(0, 0%, 98%);
 
    --card: hsl(240, 10%, 3.9%);
    --card-foreground: hsl(0, 0%, 98%);
 
    --popover: hsl(240, 10%, 3.9%);
    --popover-foreground: hsl(0, 0%, 98%);
 
    --primary: hsl(0, 0%, 98%);
    --primary-foreground: hsl(240, 5.9%, 10%);
 
    --secondary: hsl(240, 3.7%, 15.9%);
    --secondary-foreground: hsl(0, 0%, 98%);
 
    --muted: hsl(240, 3.7%, 15.9%);
    --muted-foreground: hsl(240, 5%, 64.9%);
 
    --accent: hsl(240, 3.7%, 15.9%);
    --accent-foreground: hsl(0, 0%, 98%);
 
    --destructive: hsl(0, 62.8%, 30.6%);
    --destructive-foreground: hsl(0, 0%, 98%);
 
    --border: hsl(240, 3.7%, 15.9%);
    --input: hsl(240, 3.7%, 15.9%);
    --ring: hsl(240, 4.9%, 83.9%);
  }
} */
@layer base {
  :root {
    --background: 348, 5%, 80%;
    --foreground: 0 4% 10%;

    --card: 350 4% 70%;
    --card-foreground: 0 4% 10%;
 
    --popover: 348, 5%, 80%;
    --popover-foreground: 0 4% 10%;
 
    --primary: 348 7% 41%;
    --primary-foreground: 0 3% 91%;
 
    --secondary: 0, 4%, 60%;
    --secondary-foreground: 348 5% 20%;
 
    --muted: 0 4% 60%;
    --muted-foreground: 240 3.8% 46.1%;
 
    --accent: 0 4% 60%;
    --accent-foreground: 348 5% 20%;
 
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;

    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 0 4% 10%;
 
    --radius: 0.5rem;
  }
 
  .dark {
    --background: 0 4% 10%;
    --foreground: 348, 5%, 80%;
 
    --card: 0 4% 10%;
    --card-foreground: 350 4% 70%;
 
    --popover: 0 4% 10%;
    --popover-foreground: 348, 5%, 80%;
 
    --primary: 0 3% 71%;
    --primary-foreground: 348 5% 20%;
 
    --secondary: 348 5% 20%;
    --secondary-foreground: 350 4% 70%;
 
    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;
 
    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;
 
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
 
    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 240 4.9% 83.9%;
  }
}
 
@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}


body {
  @apply h-full ;

  /* --zinc-400: @apply zinc-300 */
    
}

#__next {
  @apply h-full;
}

html {
  @apply h-full;
  
}

td {
  @apply py-2 px-4;
}

.card{
  width: 500px;
  height: 500px;
  background-color: #fff;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0,0,0,0.2);
}


.navpanel {
  justify-content: space-between;
  box-sizing: border-box;
}


.carousel-text {
  position: absolute;
}

#carousel-image, #carousel-header {
  border-top-left-radius: 60%;
  border-bottom-right-radius: 60%;
  border-bottom-left-radius: 40%;
  border-top-right-radius: 40%;
  overflow: hidden;
}

.accordion {
  list-style: none;
}

.accordion_item {
  border-top: 1px solid #9f9f9f;
}

.button {
  font-size: 16px;
  background-color: #008593;
  color: #fff;
  text-align: left;
  font-weight: 700;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  padding: 18px 8px;
  cursor: pointer;
  border: none;
}

.control {
  font-size: 20px;
}

.answer {
  background-color: #f7f7f7;
  padding: 20px;
}

/* activate toggle */
.accordion_item.active .button {
  background-color: #105057;
}
.answer_wrapper {
  display: relative;
  height: 100%;
  width: 100%;
  background-color: white;
  border: 1px solid #9f9f9f;
  max-height: 400px;
  overflow: hidden;
  z-index: 200;
}
.active>.answer_wrapper {
  position: absolute;
  overflow: auto;
  top: 0;
  
}


.slider {
  @apply mt-6 flex scroll-smooth h-[325px] snap-proximity overflow-x-auto
  overflow-y-clip gap-x-10 py-2 ;


}

